--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ for (let x in commits) {
 </script>
 </head>
 <body>
-   <i><H1><b>COVID Dashboard</b></H1></i>
+   <H1>COVID Dashboard</H1>
 <div>
 <table id="CovidTable" width="100%">
 <thead> 
